force-app/main/default/objects/Payment__c/fields/Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_ID__c</fullName>
    <description>The Payment&apos;s correspondng Netsuite ID. Synced directly from NetSuite</description>
    <inlineHelpText>The Payment&apos;s correspondng Netsuite ID. Synced directly from NetSuite</inlineHelpText>
    <label>Netsuite ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>