force-app/main/default/objects/Payment__c/fields/Netsuite_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Record_Link__c</fullName>
    <description>Link to the Payment in NetSuite</description>
    <formula>IF(ISBLANK(Netsuite_ID__c),Null,HYPERLINK(&quot;https://5606916-sb1.app.netsuite.com/app/accounting/transactions/custpymt.nl?id=&quot;&amp;Netsuite_ID__c,&quot;NetSuite URL for this record&quot;,&apos;_blank&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to the Payment in NetSuite</inlineHelpText>
    <label>Netsuite Record Link</label>
    <type>Text</type>
</CustomField>