force-app/main/default/objects/Payment__c/fields/NS_Payment_Name__c.field-meta.xml
<CustomField>
    <fullName>NS_Payment_Name__c</fullName>
    <label>NS Payment Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>