force-app/main/default/objects/Payment__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <description>Amount paid for SO in NS</description>
    <inlineHelpText>Amount paid for SO in NS</inlineHelpText>
    <label>Payment Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>