force-app/main/default/objects/Payment__c/fields/Trans_Date__c.field-meta.xml
<CustomField>
    <fullName>Trans_Date__c</fullName>
    <description>Payment created date from NS</description>
    <inlineHelpText>Payment created date from NS</inlineHelpText>
    <label>Trans Date</label>
    <type>Date</type>
</CustomField>